--- a/HousePrices.ipynb
+++ b/HousePrices.ipynb
@@ -6,7 +6,19 @@
    "source": [
     "# Home LLC Submission\n",
     "\n",
-    "Importing Necessary Libraries for Manipulating Data"
+    "We need to observe the dependency of House Price Index on various Demand-Supply factors for the past 20 years. The factors which we are going to check are:\n",
+    "<ol>\n",
+    "    <li>Average Household Income</li>\n",
+    "    <li>Unemployment</li>\n",
+    "    <li>Underemployment</li>\n",
+    "    <li>Tax Rates</li>\n",
+    "    <li>Interest Rates</li>\n",
+    "    <li>Monthly Supply of Houses</li>\n",
+    "    <li>Bank Failure</li>\n",
+    "    <li>GDP</li>\n",
+    "    <li>Population</li>\n",
+    "</ol>\n",
+    "The data has been downloaded from data sources like Kaggle, census, FRED, FHFA, etc\n"
    ]
   },
   {
@@ -4740,6 +4752,30 @@
    "source": [
     "We can say that population is a good predictor for house prices"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Result\n",
+    "\n",
+    "From our above observations we can conclude that for HPI of past 20 years the following factors have been good predictors:\n",
+    "<ol>\n",
+    "    <li>Average Household Income</li>\n",
+    "    <li>Unemployment</li>\n",
+    "    <li>Underemployment</li>\n",
+    "    <li>Tax Rates</li>\n",
+    "    <li>GDP</li>\n",
+    "    <li>Population</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
